--- a/admin/view/stylesheet/d_seo_module.css
+++ b/admin/view/stylesheet/d_seo_module.css
@@ -16,6 +16,9 @@
 .text-error {
 	color: #F56B6B;
 }
+.bootstrap-switch .bootstrap-switch-label {
+	white-space: nowrap;
+}
 .clear {
 	clear: both;
 }
