--- a/admin/view/stylesheet/d_seo_module.css
+++ b/admin/view/stylesheet/d_seo_module.css
@@ -4,14 +4,26 @@
 .label-top {
 	padding-top: 0px !important;
 }
-.text-center  {
-	text-align: center !important;
-}
 .text-left  {
 	text-align: left !important;
 }
+.text-center  {
+	text-align: center !important;
+}
 .text-right  {
 	text-align: right !important;
+}
+.text-top {
+	vertical-align: top !important;
+}
+.text-middle {
+	vertical-align: middle !important;
+}
+.text-bottom {
+	vertical-align: bottom !important;
+}
+.text-inherit {
+	vertical-align: inherit !important;
 }
 .text-error {
 	color: #F56B6B;
