--- a/admin/view/stylesheet/d_seo_module.css
+++ b/admin/view/stylesheet/d_seo_module.css
@@ -61,7 +61,10 @@
 	margin-bottom: 20px;
 }
 .control-element .name {
-	font-weight: bold;
+	margin-bottom: 15px;
+}
+.control-element .name .control-label {
+	padding-top: 0px;
 }
 .control-element .extension-name {
 	float: left;
