--- a/admin/view/template/extension/module/d_seo_module/setting.twig
+++ b/admin/view/template/extension/module/d_seo_module/setting.twig
@@ -37,7 +37,7 @@
 			<button type="button" class="close" data-dismiss="alert">&times;</button>
 		</div>
 		{% endif %}
-		<div class="panel panel-default">
+		<div class="panel panel-default panel-resizable">
 			<div class="panel-heading">
 				<h3 class="panel-title"><i class="fa fa-pencil"></i> {{ text_edit }}</h3>
 			</div>
@@ -50,7 +50,7 @@
 						<a href="{{ href_setting }}"><span class="fa fa-cog"></span> {{ text_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_field_setting }}"><span class="fa fa-cog"></span> {{ text_field_settings }}</a>
+						<a href="{{ href_field_setting }}"><span class="fa fa-cog"></span> {{ text_multi_store_field_settings }}</a>
 					</li>
 					<li>
 						<a href="{{ href_custom_page }}"><span class="fa fa-user"></span> {{ text_custom_pages }}</a>
@@ -82,7 +82,7 @@
 							<div class="tab-content">
 								<div id="vtab_basic_setting" class="tab-pane active">
 									<div class="page-header">
-										<h3><span>{{ text_basic_settings }}</span></h3>
+										<h3>{{ text_basic_settings }}</h3>
 									</div>
 									<div class="form-group">
 										<label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
@@ -106,7 +106,7 @@
 								</div>
 								<div id="vtab_htaccess" class="tab-pane">
 									<div class="page-header">
-										<h3><span>{{ text_htaccess }}</span></h3>
+										<h3>{{ text_htaccess }} <span class="info-window-item" data-href="https://opencartseomodule.com/opencart-htaccess-editor"><i class="fa fa-question-circle"></i></span></h3>
 									</div>
 									<div class="form-group">
 										<label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
@@ -131,7 +131,7 @@
 								</div>
 								<div id="vtab_robots" class="tab-pane">
 									<div class="page-header">
-										<h3><span>{{ text_robots }}</span></h3>
+										<h3>{{ text_robots }} <span class="info-window-item" data-href="https://opencartseomodule.com/robots-txt-editor"><i class="fa fa-question-circle"></i></span></h3>
 									</div>
 									<div class="form-group">
 										<label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
@@ -154,9 +154,54 @@
 				</form>
 			</div>
 		</div>
+		<div class="info-window">
+			<div class="info-window-wrap">
+				<div class="info-window-block">
+					<div class="info-window-close"><i class="fa fa-close"></i></div>
+					<div class="info-window-description"></div>
+				</div>
+			</div>
+		</div>
+		<br class="clear"/>
 	</div>
 </div>
 <script type="text/javascript">
+
+var info_window = {
+	'item' : new Array(),
+	'current_url' : ''
+}
+	
+$.each($('.info-window-item'), function(key, value) {
+	var url = $(this).attr('data-href');
+		
+	if (url) {
+		$.getJSON(url + '?format=json&callback=?', function(data) {
+			info_window.item[url] = data['description'];
+		});
+	}
+});
+	
+$('.info-window-item').on('click', function() {
+	var url = $(this).attr('data-href');
+	
+	if (url == info_window.current_url) {
+		info_window.current_url = '';
+		$('.info-window').removeClass('resized');
+		$('.panel-resizable').removeClass('resized');
+	} else {
+		info_window.current_url = url;
+		$('.info-window .info-window-description').html(info_window.item[url]);
+		$('.panel-resizable').addClass('resized');
+		$('.info-window').addClass('resized');
+	}
+});
+	
+$('.info-window .info-window-close').on('click', function() {
+	info_window.current_url = '';
+	$('.info-window').removeClass('resized');
+	$('.panel-resizable').removeClass('resized');
+});
 
 $('.switch').bootstrapSwitch({
     'onColor': 'success',
