--- a/admin/view/template/extension/module/d_seo_module/instruction.twig
+++ b/admin/view/template/extension/module/d_seo_module/instruction.twig
@@ -50,7 +50,7 @@
 					</li>
 				</ul>
 				
-				<div class="instruction">{{ text_instructions_full }}</div>
+				<div class="instruction"></div>
 			</div>
 		</div>
 	</div>
