--- a/admin/view/stylesheet/d_seo_module.css
+++ b/admin/view/stylesheet/d_seo_module.css
@@ -46,7 +46,7 @@
 	-webkit-filter: grayscale(100%);
     filter: grayscale(100%);
 }
-.control-extension.installed .image {
+.control-extension.panel-installed .image {
 	-webkit-filter: none;
     filter: none;
 }
@@ -130,6 +130,30 @@
 }
 .panel-resizable.resized {
 	width: 70%;
+}
+.panel-install {
+	padding-bottom: 0px;
+	background-color: #ecf1fb;
+	background-image: url(../../../image/catalog/d_seo_module/background.svg);
+}
+.panel-install .planet {
+	display: block;
+	margin: 0px auto;
+}
+.panel-install .features {
+	margin: 30px 0px;
+}
+.panel-install .feature {
+	display: block;
+	float: left;
+	width: 20%;
+	height: 150px;
+}
+.panel-install .feature .feature-wrap {
+	padding: 15px 15px;
+}
+.panel-install .feature .image {
+	margin-bottom: 10px;
 }
 .clear {
 	clear: both;
