--- a/admin/view/template/extension/module/d_seo_module/install.twig
+++ b/admin/view/template/extension/module/d_seo_module/install.twig
@@ -24,15 +24,48 @@
 			<button type="button" class="close" data-dismiss="alert">&times;</button>
 		</div>
 		{% endif %}
-		<div class="panel panel-default">
+		<div class="panel panel-default panel-resizable">
 			<div class="panel-heading">
 				<h3 class="panel-title">{{ text_install }}</h3>
 			</div>
-			<div class="panel-body text-center">
-				{{ help_install }}
-				<a action="{{ install }}" id="button_install" class="btn btn-success btn-lg">{{ button_install }}</a>
+			<div class="panel-body panel-install">
+				<div class="row">
+					<div class="col-md-6 col-md-offset-3 text-center">
+					{{ help_install }}
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6 col-md-offset-3 text-center">
+						<a action="{{ install }}" id="button_install" class="btn btn-success btn-lg">{{ button_install }}</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center">
+						<div class="features">
+							{% for feature in features %}
+							<div class="feature info-window-item" data-href="{{ feature['href'] }}">
+								<div class="feature-wrap">
+									<img src="{{ catalog }}image/{{ feature['image'] }}" class="image"/>
+									<p class="name">{{ feature['name'] }}</p>
+								</div>
+							</div>
+							{% endfor %}
+							<br class="clear"/>
+						</div>
+					</div>
+				</div>
+				<img src="{{ catalog }}image/catalog/{{ codename }}/planet.svg" class="planet"/>
 			</div>
 		</div>
+		<div class="info-window">
+			<div class="info-window-wrap">
+				<div class="info-window-block">
+					<div class="info-window-close"><i class="fa fa-close"></i></div>
+					<div class="info-window-description"></div>
+				</div>
+			</div>
+		</div>
+		<br class="clear"/>
 	</div>
 </div>
 <script type="text/javascript">
@@ -65,6 +98,42 @@ function showAlert(json) {
 }
 </script>
 <script type="text/javascript">
+
+var info_window = {
+	'item' : new Array(),
+	'current_url' : ''
+}
+	
+$.each($('.info-window-item'), function(key, value) {
+	var url = $(this).attr('data-href');
+		
+	if (url) {
+		$.getJSON(url + '?format=json&callback=?', function(data) {
+			info_window.item[url] = data['description'];
+		});
+	}
+});
+	
+$('.info-window-item').on('click', function() {
+	var url = $(this).attr('data-href');
+	
+	if (url == info_window.current_url) {
+		info_window.current_url = '';
+		$('.info-window').removeClass('resized');
+		$('.panel-resizable').removeClass('resized');
+	} else {
+		info_window.current_url = url;
+		$('.info-window .info-window-description').html(info_window.item[url]);
+		$('.panel-resizable').addClass('resized');
+		$('.info-window').addClass('resized');
+	}
+});
+	
+$('.info-window .info-window-close').on('click', function() {
+	info_window.current_url = '';
+	$('.info-window').removeClass('resized');
+	$('.panel-resizable').removeClass('resized');
+});
 
 $('body').on('click', '#button_install', function(){
 	$.ajax({
