--- a/admin/view/template/extension/module/d_seo_module/dashboard.twig
+++ b/admin/view/template/extension/module/d_seo_module/dashboard.twig
@@ -56,7 +56,7 @@
 						<a href="{{ href_field_setting }}"><span class="fa fa-cog"></span> {{ text_multi_store_field_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_custom_page }}"><span class="fa fa-user"></span> {{ text_custom_pages }}</a>
+						<a href="{{ href_custom_page }}"><span class="fa fa-user"></span> {{ text_custom_pages_target_keywords }}</a>
 					</li>
 					<li>
 						<a href="{{ href_export_import }}"><span class="fa fa-file-o"></span> {{ text_export_import }}</a>
@@ -91,6 +91,7 @@
 							<br class="clear"/>
 						</div>
 						{% endif %}
+						<div class="col-sm-6">
 						<div class="page-header">
 							<h3>{{ text_quick_setup }} <span class="info-window-item" data-href="https://opencartseomodule.com/quick-setup"><i class="fa fa-question-circle"></i></span></h3>
 						</div>
@@ -99,10 +100,10 @@
 							{% for control_element in control_elements %}
 							{% if control_element['implemented'] == 0 %}
 							<div class="control-element row">
-								<div class="col-sm-1">
+								<div class="col-sm-2">
 									<a action="{{ control_element['edit_href'] }}" confirm="{{ control_element['confirm'] }}" class="button-edit btn btn-success">{{ button_setup }}</a>
 								</div>
-								<div class="col-sm-11">
+								<div class="col-sm-10">
 									<h4 class="name"><label class="control-label"><span data-toggle="tooltip" title="{{ control_element['description'] }}">{{ control_element['name'] }}</span></label></h4>
 									<p class="extension-name">{{ control_element['extension_name'] }}</p>
 									<a href="{{ control_element['href'] }}" target="_blank" class="details">{{ text_details }}</a>
@@ -115,6 +116,8 @@
 						{% else %}
 						<p>{{ text_no_control_elements }}</p>
 						{% endif %}
+						</div>
+						<div class="col-sm-6">
 						<div class="page-header">
 							<h3>{{ text_implemented }}</h3>
 						</div>
@@ -123,10 +126,10 @@
 							{% for control_element in control_elements %}
 							{% if control_element['implemented'] == 1 %}
 							<div class="control-element row">
-								<div class="col-sm-1">
+								<div class="col-sm-2">
 									<a action="{{ control_element['edit_href'] }}" confirm="{{ control_element['confirm'] }}" class="button-edit btn btn-info">{{ button_resetup }}</a>
 								</div>
-								<div class="col-sm-11">
+								<div class="col-sm-10">
 									<h4 class="name"><label class="control-label"><span data-toggle="tooltip" title="{{ control_element['description'] }}">{{ control_element['name'] }}</span></label></h4>
 									<p class="extension-name">{{ control_element['extension_name'] }}</p>
 									<a href="{{ control_element['href'] }}" target="_blank" class="details">{{ text_details }}</a>
@@ -139,6 +142,7 @@
 						{% else %}
 						<p>{{ text_no_control_elements }}</p>
 						{% endif %}
+						</div>
 					</div>
 				</form>
 			</div>
