--- a/admin/view/template/extension/module/d_seo_module/field_setting.twig
+++ b/admin/view/template/extension/module/d_seo_module/field_setting.twig
@@ -42,7 +42,7 @@
 						<a href="{{ href_field_setting }}"><span class="fa fa-cog"></span> {{ text_multi_store_field_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_custom_page }}"><span class="fa fa-user"></span> {{ text_custom_pages }}</a>
+						<a href="{{ href_custom_page }}"><span class="fa fa-user"></span> {{ text_custom_pages_target_keywords }}</a>
 					</li>
 					<li>
 						<a href="{{ href_export_import }}"><span class="fa fa-file-o"></span> {{ text_export_import }}</a>
