--- a/admin/view/template/extension/module/d_seo_module/setting.twig
+++ b/admin/view/template/extension/module/d_seo_module/setting.twig
@@ -87,14 +87,14 @@
 									<div class="form-group">
 										<label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
 										<div class="col-sm-8">
-											<input type="hidden" name="{{ codename }}_status" value="0" />
-											<input type="checkbox" name="{{ codename }}_status" value="1" class="switch" data-label-text="{{ text_enabled }}" {% if status %}checked="checked"{% endif %} />
+											<input type="hidden" name="module_{{ codename }}_status" value="0" />
+											<input type="checkbox" name="module_{{ codename }}_status" value="1" class="switch" data-label-text="{{ text_enabled }}" {% if status %}checked="checked"{% endif %} />
 										</div>
 									</div>
 									<div class="form-group">
 										<label class="col-sm-2 control-label" for="input-list-limit">{{ entry_list_limit }}</label>
 										<div class="col-sm-10">
-											<input type="text" name="{{ codename }}_setting[list_limit]" value="{{ setting['list_limit'] }}" class="form-control"/>
+											<input type="text" name="module_{{ codename }}_setting[list_limit]" value="{{ setting['list_limit'] }}" class="form-control"/>
 										</div>
 									</div>
 									<div class="form-group">
