--- a/admin/view/template/extension/module/d_seo_module/custom_page.twig
+++ b/admin/view/template/extension/module/d_seo_module/custom_page.twig
@@ -45,19 +45,19 @@
 			<div class="panel-body">
 				<ul class="nav nav-tabs">
 					<li>
-						<a href="{{ href_dashboard }}"><span class="fa fa-dashboard"></span> {{ text_dashboard }}</a>
+						<a href="{{ href_dashboard }}"><span class="fa fa-home"></span> {{ text_dashboard }}</a>
 					</li>
 					<li>
 						<a href="{{ href_setting }}"><span class="fa fa-cog"></span> {{ text_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_field_setting }}"><span class="fa fa-cog"></span> {{ text_multi_store_field_settings }}</a>
+						<a href="{{ href_field_setting }}"><span class="fa fa-list-alt"></span> {{ text_multi_store_field_settings }}</a>
 					</li>
 					<li class="active">
-						<a href="{{ href_custom_page }}"><span class="fa fa-user"></span> {{ text_custom_pages_target_keywords }}</a>
+						<a href="{{ href_custom_page }}"><span class="fa fa-key"></span> {{ text_custom_pages_target_keywords }}</a>
 					</li>
 					<li>
-						<a href="{{ href_export_import }}"><span class="fa fa-file-o"></span> {{ text_export_import }}</a>
+						<a href="{{ href_export_import }}"><span class="fa fa-exchange"></span> {{ text_export_import }}</a>
 					</li>
 					<li>
 						<a href="{{ href_instruction }}"><span class="fa fa-graduation-cap"></span> {{ text_instructions }}</a>
@@ -66,7 +66,7 @@
 								
 				<form method="post" enctype="multipart/form-data" id="form" class="form-horizontal">
 					<div class="page-header">
-						<h3>{{ text_custom_pages_target_keywords }} <span class="info-window-item" data-href="https://opencartseomodule.com/target-keyword-planner"><i class="fa fa-question-circle"></i></span></h3>
+						<h3>{{ text_custom_pages_target_keywords }} <span class="info-window-item" data-href="https://opencartseomodule.com/target-keyword-planner"><i class="fa fa-question"></i></span></h3>
 					</div>
 					<div class="table-responsive">
 						<table class="table table-bordered table-hover">
@@ -117,7 +117,7 @@
 							</tbody>
 						</table>
 					</div>
-					<div class="row">
+					<div class="row m-t-lg m-b-lg">
 						<div class="col-sm-6 text-left">{{ pagination }}</div>
 						<div class="col-sm-6 text-right">{{ results }}</div>
 					</div>	
