--- a/admin/view/template/extension/dashboard/d_seo_module_target_keyword.twig
+++ b/admin/view/template/extension/dashboard/d_seo_module_target_keyword.twig
@@ -70,7 +70,7 @@
 						<div class="col-sm-8">
 							<input type="hidden" name="dashboard_{{ codename }}_setting[duplicate_status]" value="0" />
 							<input type="checkbox" name="dashboard_{{ codename }}_setting[duplicate_status]" value="1" class="switch" data-label-text="{{ text_enabled }}" {% if setting['duplicate_status'] %}checked="checked"{% endif %} />
-							&nbsp;<span class="info-window-item" data-href="https://opencartseomodule.com/dashboard-widget-for-duplicate-target-keywords"><i class="fa fa-question-circle"></i></span>
+							&nbsp;<span class="info-window-item" data-href="https://opencartseomodule.com/dashboard-widget-for-duplicate-target-keywords"><i class="fa fa-question"></i></span>
 						</div>												
 					</div>
 					<div class="form-group">
