--- a/admin/view/template/extension/module/d_seo_module/dashboard.twig
+++ b/admin/view/template/extension/module/d_seo_module/dashboard.twig
@@ -35,8 +35,8 @@
 			<button type="button" class="close" data-dismiss="alert">&times;</button>
 		</div>
 		{% endif %}
-		{% if warning %}
-		<div class="alert alert-warning"><i class="fa fa-exclamation-circle"></i> {{ warning }}
+		{% if info %}
+		<div class="alert alert-info text-center">{{ info }}
 			<button type="button" class="close" data-dismiss="alert">&times;</button>
 		</div>
 		{% endif %}
@@ -47,19 +47,19 @@
 			<div class="panel-body">
 				<ul class="nav nav-tabs">
 					<li class="active">
-						<a href="{{ href_dashboard }}"><span class="fa fa-dashboard"></span> {{ text_dashboard }}</a>
+						<a href="{{ href_dashboard }}"><span class="fa fa-home"></span> {{ text_dashboard }}</a>
 					</li>
 					<li>
 						<a href="{{ href_setting }}"><span class="fa fa-cog"></span> {{ text_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_field_setting }}"><span class="fa fa-cog"></span> {{ text_multi_store_field_settings }}</a>
+						<a href="{{ href_field_setting }}"><span class="fa fa-list-alt"></span> {{ text_multi_store_field_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_custom_page }}"><span class="fa fa-user"></span> {{ text_custom_pages_target_keywords }}</a>
+						<a href="{{ href_custom_page }}"><span class="fa fa-key"></span> {{ text_custom_pages_target_keywords }}</a>
 					</li>
 					<li>
-						<a href="{{ href_export_import }}"><span class="fa fa-file-o"></span> {{ text_export_import }}</a>
+						<a href="{{ href_export_import }}"><span class="fa fa-exchange"></span> {{ text_export_import }}</a>
 					</li>
 					<li>
 						<a href="{{ href_instruction }}"><span class="fa fa-graduation-cap"></span> {{ text_instructions }}</a>
@@ -67,23 +67,23 @@
 				</ul>
 				
 				<form action="{{ action }}" method="post" enctype="multipart/form-data" id="form" class="form-horizontal">
-					<div class="col-sm-12">
+					<div class="col-sm-12 m-b-xl">
 						{% if control_extensions %}
 						<div class="page-header">
-							<h3>{{ text_seo_extensions }} <span class="info-window-item" data-href="https://opencartseomodule.com/seo-module-dashboard"><i class="fa fa-question-circle"></i></span></h3>
+							<h3>{{ text_seo_extensions }} <span class="info-window-item" data-href="https://opencartseomodule.com/seo-module-dashboard"><i class="fa fa-question"></i></span></h3>
 						</div>
 						<div class="control-extensions">
 							{% for control_extension in control_extensions %}
 							{% if control_extension['installed'] %}
 							<div class="control-extension installed text-center">
 								<img src="{{ catalog }}image/{{ control_extension['image'] }}" title="{{ control_extension['name'] }}" alt="{{ control_extension['name'] }}" class="image"/>
-								<h4 class="name">{{ control_extension['name'] }}</h4>
-								<a href="{{ control_extension['href'] }}" target="_blank" class="btn btn-info">{{ button_view }}</a>
+								<h4 class="name m-b-md">{{ control_extension['name'] }}</h4>
+								<a href="{{ control_extension['href'] }}" target="_blank" class="btn btn-primary">{{ button_view }}</a>
 							</div>
 							{% else %}
 							<div class="control-extension text-center">
 								<img src="{{ catalog }}image/{{ control_extension['image'] }}" title="{{ control_extension['name'] }}" alt="{{ control_extension['name'] }}" class="image"/>
-								<h4 class="name">{{ control_extension['name'] }}</h4>
+								<h4 class="name m-b-md">{{ control_extension['name'] }}</h4>
 								<a action="{{ control_extension['install_href'] }}" class="button-install btn btn-success">{{ button_install }}</a>
 							</div>
 							{% endif %}
@@ -91,58 +91,78 @@
 							<br class="clear"/>
 						</div>
 						{% endif %}
-						<div class="col-sm-6">
-						<div class="page-header">
-							<h3>{{ text_quick_setup }} <span class="info-window-item" data-href="https://opencartseomodule.com/quick-setup"><i class="fa fa-question-circle"></i></span></h3>
-						</div>
-						{% if quick_setup_total %}
-						<div class="control-elements">
-							{% for control_element in control_elements %}
-							{% if control_element['implemented'] == 0 %}
-							<div class="control-element row">
-								<div class="col-sm-2">
-									<a action="{{ control_element['edit_href'] }}" confirm="{{ control_element['confirm'] }}" class="button-edit btn btn-success">{{ button_setup }}</a>
-								</div>
-								<div class="col-sm-10">
-									<h4 class="name"><label class="control-label"><span data-toggle="tooltip" title="{{ control_element['description'] }}">{{ control_element['name'] }}</span></label></h4>
-									<p class="extension-name">{{ control_element['extension_name'] }}</p>
-									<a href="{{ control_element['href'] }}" target="_blank" class="details">{{ text_details }}</a>
-									<br class="clear"/>
-								</div>
-							</div>
-							{% endif %}
-							{% endfor %}
-						</div>
-						{% else %}
-						<p>{{ text_no_control_elements }}</p>
-						{% endif %}
-						</div>
-						<div class="col-sm-6">
-						<div class="page-header">
-							<h3>{{ text_implemented }}</h3>
-						</div>
-						{% if implemented_total %}
-						<div class="control-elements">
-							{% for control_element in control_elements %}
-							{% if control_element['implemented'] == 1 %}
-							<div class="control-element row">
-								<div class="col-sm-2">
-									<a action="{{ control_element['edit_href'] }}" confirm="{{ control_element['confirm'] }}" class="button-edit btn btn-info">{{ button_resetup }}</a>
-								</div>
-								<div class="col-sm-10">
-									<h4 class="name"><label class="control-label"><span data-toggle="tooltip" title="{{ control_element['description'] }}">{{ control_element['name'] }}</span></label></h4>
-									<p class="extension-name">{{ control_element['extension_name'] }}</p>
-									<a href="{{ control_element['href'] }}" target="_blank" class="details">{{ text_details }}</a>
-									<br class="clear"/>
-								</div>
-							</div>
-							{% endif %}
-							{% endfor %}
-						</div>
-						{% else %}
-						<p>{{ text_no_control_elements }}</p>
-						{% endif %}
-						</div>
+					</div>
+					<div class="table-responsive col-sm-6">
+						<table class="table table-bordered table-hover control-elements">
+							<thead>
+								<tr class="fields">
+									<td class="field">
+										<h4 class="m-b-none"><span class="fa fa-rocket"></span> {{ text_quick_setup }} <span class="info-window-item" data-href="https://opencartseomodule.com/quick-setup"><i class="fa fa-question"></i></span></h4>
+									</td>
+								</tr>
+							</thead>
+							<tbody class="control-elements">
+								{% if quick_setup_total %}
+								{% for control_element in control_elements %}
+								{% if control_element['implemented'] == 0 %}
+								<tr class="control-element">
+									<td class="field">
+										<div class="row">
+											<div class="col-sm-3 text-center">
+												<a action="{{ control_element['edit_href'] }}" confirm="{{ control_element['confirm'] }}" class="button-edit btn btn-sm btn-success">{{ button_setup }}</a>
+											</div>
+											<div class="col-sm-9">
+												<h4 class="name m-b-sm"><label class="control-label p-n"><span data-toggle="tooltip" title="{{ control_element['description'] }}">{{ control_element['name'] }}</span></label></h4>
+												<p class="extension-name">{{ control_element['extension_name'] }}</p>
+												<a href="{{ control_element['href'] }}" target="_blank" class="details">{{ text_details }}</a>
+												<br class="clear"/>
+											</div>
+										</div>
+									</td>
+								</tr>
+								{% endif %}
+								{% endfor %}
+								{% else %}
+								<tr><td>{{ text_no_control_elements }}</td></tr>
+								{% endif %}
+							</tbody>
+						</table>
+					</div>
+					<div class="table-responsive col-sm-6">
+						<table class="table table-bordered table-hover control-elements">
+							<thead>
+								<tr class="fields">
+									<td class="field">
+										<h4 class="m-b-none"><span class="fa fa-refresh"></span> {{ text_implemented }}</h4>
+									</td>
+								</tr>
+							</thead>
+							<tbody>
+								{% if implemented_total %}
+								{% for control_element in control_elements %}
+								{% if control_element['implemented'] == 1 %}
+								<tr class="control-element">
+									<td class="field">
+										<div class="row">
+											<div class="col-sm-3 text-center">
+												<a action="{{ control_element['edit_href'] }}" confirm="{{ control_element['confirm'] }}" class="button-edit btn btn-sm btn-primary">{{ button_resetup }}</a>
+											</div>
+											<div class="col-sm-9">
+												<h4 class="name m-b-sm"><label class="control-label p-n"><span data-toggle="tooltip" title="{{ control_element['description'] }}">{{ control_element['name'] }}</span></label></h4>
+												<p class="extension-name">{{ control_element['extension_name'] }}</p>
+												<a href="{{ control_element['href'] }}" target="_blank" class="details">{{ text_details }}</a>
+												<br class="clear"/>
+											</div>
+										</div>
+									</td>
+								</tr>
+								{% endif %}
+								{% endfor %}
+								{% else %}
+								<tr><td>{{ text_no_control_elements }}</td></tr>
+								{% endif %}
+							</tbody>
+						</table>
 					</div>
 				</form>
 			</div>
