--- a/admin/view/template/extension/module/d_seo_module/export_import.twig
+++ b/admin/view/template/extension/module/d_seo_module/export_import.twig
@@ -31,33 +31,33 @@
 			<div class="panel-body">
 				<ul class="nav nav-tabs">
 					<li>
-						<a href="{{ href_dashboard }}"><span class="fa fa-dashboard"></span> {{ text_dashboard }}</a>
+						<a href="{{ href_dashboard }}"><span class="fa fa-home"></span> {{ text_dashboard }}</a>
 					</li>
 					<li>
 						<a href="{{ href_setting }}"><span class="fa fa-cog"></span> {{ text_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_field_setting }}"><span class="fa fa-cog"></span> {{ text_multi_store_field_settings }}</a>
+						<a href="{{ href_field_setting }}"><span class="fa fa-list-alt"></span> {{ text_multi_store_field_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_custom_page }}"><span class="fa fa-user"></span> {{ text_custom_pages_target_keywords }}</a>
+						<a href="{{ href_custom_page }}"><span class="fa fa-key"></span> {{ text_custom_pages_target_keywords }}</a>
 					</li>
 					<li class="active">
-						<a href="{{ href_export_import }}"><span class="fa fa-file-o"></span> {{ text_export_import }}</a>
+						<a href="{{ href_export_import }}"><span class="fa fa-exchange"></span> {{ text_export_import }}</a>
 					</li>
 					<li>
 						<a href="{{ href_instruction }}"><span class="fa fa-graduation-cap"></span> {{ text_instructions }}</a>
 					</li>
 				</ul>
 				
-				<div class="row">
+				<div class="flex row">
 					<div class="col-sm-2">
 						<ul class="nav nav-pills nav-stacked">
 							<li class="active">
-								<a href="#vtab_export" data-toggle="tab"><span>{{ text_export }}</span></a>
+								<a href="#vtab_export" data-toggle="tab"><span class="fa fa-download"></span> {{ text_export }}</a>
 							</li>
 							<li>
-								<a href="#vtab_import" data-toggle="tab"><span>{{ text_import }}</span></a>
+								<a href="#vtab_import" data-toggle="tab"><span class="fa fa-upload"></span> {{ text_import }}</a>
 							</li>
 						</ul>
 					</div>
@@ -85,8 +85,7 @@
 									<div class="form-group">
 										<label class="col-sm-2 control-label" for="input-sheet">{{ entry_sheet }}</label>
 										<div class="col-sm-10">
-											<input type="checkbox" name="sheet_codes[]" value="custom_page" class="switch" data-label-text="{{ text_custom_pages }}" checked="checked"/>
-											&nbsp;<span class="info-window-item" data-href="https://opencartseomodule.com/export-import-for-custom-page-keywords"><i class="fa fa-question-circle"></i></span>
+											<input type="checkbox" name="sheet_codes[]" value="custom_page" class="switch" data-label-text="{{ text_custom_pages }}" checked="checked"/> <span class="info-window-item" data-href="https://opencartseomodule.com/export-import-for-custom-page-keywords"><i class="fa fa-question"></i></span>
 										</div>
 									</div>	
 									<div class="form-group">
@@ -103,7 +102,7 @@
 								</div>
 								<form action="{{ import }}" method="post" enctype="multipart/form-data" id="form_import" class="form-horizontal">
 									<div class="form-group">
-										<label class="col-sm-2 control-label label-top">{{ entry_upload }}</label>
+										<label class="col-sm-2 control-label">{{ entry_upload }}</label>
 										<div class="col-sm-10">
 											<input type="file" name="upload" id="upload"/>
 										</div>
