--- a/admin/view/template/extension/module/d_seo_module/field_setting.twig
+++ b/admin/view/template/extension/module/d_seo_module/field_setting.twig
@@ -33,19 +33,19 @@
 			<div class="panel-body">
 				<ul class="nav nav-tabs">
 					<li>
-						<a href="{{ href_dashboard }}"><span class="fa fa-dashboard"></span> {{ text_dashboard }}</a>
+						<a href="{{ href_dashboard }}"><span class="fa fa-home"></span> {{ text_dashboard }}</a>
 					</li>
 					<li>
 						<a href="{{ href_setting }}"><span class="fa fa-cog"></span> {{ text_settings }}</a>
 					</li>
 					<li class="active">
-						<a href="{{ href_field_setting }}"><span class="fa fa-cog"></span> {{ text_multi_store_field_settings }}</a>
+						<a href="{{ href_field_setting }}"><span class="fa fa-list-alt"></span> {{ text_multi_store_field_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_custom_page }}"><span class="fa fa-user"></span> {{ text_custom_pages_target_keywords }}</a>
+						<a href="{{ href_custom_page }}"><span class="fa fa-key"></span> {{ text_custom_pages_target_keywords }}</a>
 					</li>
 					<li>
-						<a href="{{ href_export_import }}"><span class="fa fa-file-o"></span> {{ text_export_import }}</a>
+						<a href="{{ href_export_import }}"><span class="fa fa-exchange"></span> {{ text_export_import }}</a>
 					</li>
 					<li>
 						<a href="{{ href_instruction }}"><span class="fa fa-graduation-cap"></span> {{ text_instructions }}</a>
@@ -53,12 +53,12 @@
 				</ul>
 				
 				<form action="{{ action }}" method="post" enctype="multipart/form-data" id="form" class="form-horizontal">
-					<div class="row">
+					<div class="flex row">
 						<div class="col-sm-2">
 							<ul class="nav nav-pills nav-stacked">
 								{% for sheet in field_setting['sheet'] %}
 								<li {% if (sheet == field_setting['sheet']|first) %}class="active"{% endif %}>
-									<a href="#vtab_{{ sheet['code'] }}" data-toggle="tab"><span>{{ sheet['name'] }}</span></a>
+									<a href="#vtab_{{ sheet['code'] }}" data-toggle="tab"><span class="fa {{ sheet['icon'] }}"></span> {{ sheet['name'] }}</a>
 								</li>
 								{% endfor %}
 							</ul>
@@ -71,18 +71,18 @@
 										<h3>{{ sheet['name'] }}</h3>
 									</div>
 									<div class="table-responsive">
-										<table class="table table-bordered table-hover">
+										<table class="table table-bordered table-hover m-b-none">
 											<thead>
 												<tr>
 													<th class="text-center">{{ column_field }}</th>
-													<th class="text-center">{{ column_multi_store_status }} <span class="info-window-item" data-href="https://opencartseomodule.com/multistore-seo-support"><i class="fa fa-question-circle"></i></span></th>
+													<th class="text-center">{{ column_multi_store_status }} <span class="info-window-item" data-href="https://opencartseomodule.com/multistore-seo-support"><i class="fa fa-question"></i></span></th>
 												</tr>
 											</thead>
 											<tbody>
 												{% for field in sheet['field'] %}
 												{% if (field['multi_store']) %}
 												<tr>
-													<td class="text-left"><label class="control-label label-top">{{ field['name'] }}</label></td>
+													<td class="text-left"><label class="control-label p-n">{{ field['name'] }}</label></td>
 													<td class="text-center">
 														<input type="hidden" name="module_{{ codename }}_field_setting[sheet][{{ sheet['code'] }}][field][{{ field['code'] }}][multi_store_status]" value="0" />
 														<input type="checkbox" name="module_{{ codename }}_field_setting[sheet][{{ sheet['code'] }}][field][{{ field['code'] }}][multi_store_status]" value="1" class="switch" data-label-text="{{ text_enabled }}" {% if field['multi_store_status'] %}checked="checked"{% endif %} />
