--- a/admin/view/template/extension/module/d_seo_module/install.twig
+++ b/admin/view/template/extension/module/d_seo_module/install.twig
@@ -28,7 +28,7 @@
 			<div class="panel-heading">
 				<h3 class="panel-title">{{ text_install }}</h3>
 			</div>
-			<div class="panel-body panel-install">
+			<div class="panel-body panel-install" style="background-image: url({{ catalog }}image/catalog/{{ codename }}/background.svg)">
 				<div class="row">
 					<div class="col-md-6 col-md-offset-3 text-center">
 					{{ help_install }}
@@ -68,6 +68,14 @@
 		<br class="clear"/>
 	</div>
 </div>
+<script type="text/javascript">
+
+var column_count = 5;
+var feature_count = $('.features .feature').length;
+
+$('.features .feature').eq(column_count * Math.floor(feature_count / column_count)).css('margin-left', (column_count - (feature_count % column_count)) * (50 / column_count) + '%');
+
+</script>
 <script type="text/javascript">
 
 function showAlert(json) {
