--- a/admin/view/template/extension/module/d_seo_module/instruction.twig
+++ b/admin/view/template/extension/module/d_seo_module/instruction.twig
@@ -31,19 +31,19 @@
 			<div class="panel-body">
 				<ul class="nav nav-tabs">
 					<li>
-						<a href="{{ href_dashboard }}"><span class="fa fa-dashboard"></span> {{ text_dashboard }}</a>
+						<a href="{{ href_dashboard }}"><span class="fa fa-home"></span> {{ text_dashboard }}</a>
 					</li>
 					<li>
 						<a href="{{ href_setting }}"><span class="fa fa-cog"></span> {{ text_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_field_setting }}"><span class="fa fa-cog"></span> {{ text_multi_store_field_settings }}</a>
+						<a href="{{ href_field_setting }}"><span class="fa fa-list-alt"></span> {{ text_multi_store_field_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_custom_page }}"><span class="fa fa-user"></span> {{ text_custom_pages_target_keywords }}</a>
+						<a href="{{ href_custom_page }}"><span class="fa fa-key"></span> {{ text_custom_pages_target_keywords }}</a>
 					</li>
 					<li>
-						<a href="{{ href_export_import }}"><span class="fa fa-file-o"></span> {{ text_export_import }}</a>
+						<a href="{{ href_export_import }}"><span class="fa fa-exchange"></span> {{ text_export_import }}</a>
 					</li>
 					<li class="active">
 						<a href="{{ href_instruction }}"><span class="fa fa-graduation-cap"></span> {{ text_instructions }}</a>
