--- a/admin/view/template/extension/module/d_seo_module/setting.twig
+++ b/admin/view/template/extension/module/d_seo_module/setting.twig
@@ -44,19 +44,19 @@
 			<div class="panel-body">
 				<ul class="nav nav-tabs">
 					<li>
-						<a href="{{ href_dashboard }}"><span class="fa fa-dashboard"></span> {{ text_dashboard }}</a>
+						<a href="{{ href_dashboard }}"><span class="fa fa-home"></span> {{ text_dashboard }}</a>
 					</li>
 					<li class="active">
 						<a href="{{ href_setting }}"><span class="fa fa-cog"></span> {{ text_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_field_setting }}"><span class="fa fa-cog"></span> {{ text_multi_store_field_settings }}</a>
+						<a href="{{ href_field_setting }}"><span class="fa fa-list-alt"></span> {{ text_multi_store_field_settings }}</a>
 					</li>
 					<li>
-						<a href="{{ href_custom_page }}"><span class="fa fa-user"></span> {{ text_custom_pages_target_keywords }}</a>
+						<a href="{{ href_custom_page }}"><span class="fa fa-key"></span> {{ text_custom_pages_target_keywords }}</a>
 					</li>
 					<li>
-						<a href="{{ href_export_import }}"><span class="fa fa-file-o"></span> {{ text_export_import }}</a>
+						<a href="{{ href_export_import }}"><span class="fa fa-exchange"></span> {{ text_export_import }}</a>
 					</li>
 					<li>
 						<a href="{{ href_instruction }}"><span class="fa fa-graduation-cap"></span> {{ text_instructions }}</a>
@@ -64,17 +64,17 @@
 				</ul>
 				
 				<form action="{{ action }}" method="post" enctype="multipart/form-data" id="form" class="form-horizontal">
-					<div class="row">
+					<div class="flex row">
 						<div class="col-sm-2">
 							<ul class="nav nav-pills nav-stacked">
 								<li class="active">
-									<a href="#vtab_basic_setting" data-toggle="tab"><span>{{ text_basic_settings }}</span></a>
+									<a href="#vtab_basic_setting" data-toggle="tab"><span class="fa fa-cog"></span> {{ text_basic_settings }}</a>
 								</li>
 								<li>
-									<a href="#vtab_htaccess" data-toggle="tab"><span>{{ text_htaccess }}</span></a>
+									<a href="#vtab_htaccess" data-toggle="tab"><span class="fa fa-file-text-o"></span> {{ text_htaccess }}</a>
 								</li>
 								<li>
-									<a href="#vtab_robots" data-toggle="tab"><span>{{ text_robots }}</span></a>
+									<a href="#vtab_robots" data-toggle="tab"><span class="fa fa-file-code-o"></span> {{ text_robots }}</a>
 								</li>
 							</ul>
 						</div>
@@ -106,7 +106,7 @@
 								</div>
 								<div id="vtab_htaccess" class="tab-pane">
 									<div class="page-header">
-										<h3>{{ text_htaccess }} <span class="info-window-item" data-href="https://opencartseomodule.com/opencart-htaccess-editor"><i class="fa fa-question-circle"></i></span></h3>
+										<h3>{{ text_htaccess }} <span class="info-window-item" data-href="https://opencartseomodule.com/opencart-htaccess-editor"><i class="fa fa-question"></i></span></h3>
 									</div>
 									<div class="form-group">
 										<label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
@@ -131,7 +131,7 @@
 								</div>
 								<div id="vtab_robots" class="tab-pane">
 									<div class="page-header">
-										<h3>{{ text_robots }} <span class="info-window-item" data-href="https://opencartseomodule.com/robots-txt-editor"><i class="fa fa-question-circle"></i></span></h3>
+										<h3>{{ text_robots }} <span class="info-window-item" data-href="https://opencartseomodule.com/robots-txt-editor"><i class="fa fa-question"></i></span></h3>
 									</div>
 									<div class="form-group">
 										<label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
